--- a/custom.css
+++ b/custom.css
@@ -24,3 +24,13 @@
         transform: rotate(360deg);
     }
 }
+
+.screen-reader-only
+{
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
